# vrs-python

./: .gitignore  .gitmodules  .hgtags  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  TODO  compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  vr-shell
.binder/: postBuild  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build-seqrepo-slim.yaml  pylint.yml  python-cqa.yml  release.yml  stale.yml  test.yml
cassettes/: translate_sequence_identifier.yaml
docs/: make.bat
docs/changelog/0.5/: 0.5.0.clog  0.5.0.rst  Makefile
docs/changelog/0.6/: 0.6.0.clog  0.6.0.rst  0.6.1.clog  0.6.1.rst  0.6.2.clog  0.6.2.rst  0.6.3.clog  0.6.3.rst  0.6.4.clog  0.6.4.rst
docs/docker/: README.md
docs/extras/: README.md  vcf_annotator.md
docs/setup_help/: docker-compose.md  m1_mac_setup.md  uta_installation.md
docs/setup_help/docker-compose-examples/: seqrepo-copy-local.compose.yaml  seqrepo-mount-local.compose.yaml
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  install.rst
docs/source/_templates/: module_summary.rst
docs/source/reference/: index.rst
etc/: develop.reqs
examples/: Allele.json  Allele.rst  pydantic_to_json_schema.py  pydantic_to_rst.py  utils.py
misc/clinvar/: parse-parser  parse-test
misc/containers/: Dockerfile  build-GRCh37.bash  build-GRCh38.bash  build-with-tar.sh
misc/debugging/: sometimes-referrable.py
misc/githooks/: post-checkout
misc/stack/: docker-compose.yml
notebooks/: 01 - Core Objects.ipynb  02 - BundleManager.ipynb  03 - TPMT Demo.ipynb  Absolute Copy Number Variants.ipynb  ApoE Example.ipynb  ApoE Example.vmc.json  Application Demo.ipynb  Associating Annotations.ipynb  ChromosomeLocation.ipynb  Copy Number Variants.ipynb  Docs and Validation.ipynb  Examples and Tests.ipynb  Extras.ipynb  Feature Based Locations.ipynb  HGVS Demo.ipynb  HGVS Translation.ipynb  Haplotypes and Genotypes.ipynb  Haplotypes.ipynb  Inlined and Referenced Objects.ipynb  Interbase Interval tests.ipynb  Master-Examples.ipynb  Operations.ipynb  Overview.ipynb  PGx - CYP2C19 example 2.ipynb  PGx.ipynb  Quick Start.ipynb  Schema.ipynb  Scraps.ipynb  Terra.ipynb  Transcript Locations.ipynb  Truncated Digest Collision Analysis.ipynb  Untitled.ipynb  VMC Bundle Example.ipynb  VMC Digest and Computed Identifiers Example.ipynb  VMCBundleManager.ipynb  Validation Tests.ipynb  Variation Sets.ipynb  develop.ipynb  objects.json  scratch.ipynb  (+3 more)
notebooks/Examples/: Associating Annotations.ipynb  Docs and Validation.ipynb  HGVS Translation.ipynb
notebooks/Guided-Tour/: Extras.ipynb  HGVS Translation Example.ipynb  Operations.ipynb  Schema.ipynb  Welcome.ipynb  objects.json
notebooks/Sandbox/: Inline v. Referenced.ipynb  Inlined and Referenced Objects.ipynb
notebooks/Sketches/: Normalization.ipynb
notebooks/Weekly Updates/: Sprint 2 Demo.ipynb  Sprint 3 Demo (in progress).ipynb
notebooks/appendices/: Contributed Tests.ipynb  Truncated Digest Collision Analysis.ipynb  VMC Digest and Computed Identifiers Example.ipynb  Validation Tests.ipynb
notebooks/archive/: 03 - TPMT Demo.ipynb  Interbase Interval tests.ipynb  Overview.ipynb  Quick Wins.ipynb  Scraps.ipynb  VMC Digest and Computed Identifiers Example.ipynb
notebooks/archive/mini demos/: Allele Registry.ipynb  user-selectable id functions.ipynb
notebooks/data/: CYP2C19_allele_definition_table.csv
notebooks/develop/: NestedInterval.ipynb
notebooks/getting_started/: 1 Quick Start.ipynb  1_Quick_Start.ipynb  2 Exploring the SeqRepo DataProxy.ipynb  2_Exploring_the_SeqRepo_DataProxy.ipynb  3 Basic Models.ipynb  3_Basic_Models.ipynb  4 Exploring the AlleleTranslator.ipynb  4_Exploring_the_AlleleTranslator.ipynb  5 Exploring the CnvTranslator.ipynb  5_Exploring_the_CnvTranslator.ipynb  6_Upcoming_features.ipynb  README.md
notebooks/mini demos/: Allele Registry.ipynb  user-selectable id functions.ipynb
notebooks/nbsupport/: __init__.py  logging.py  nbimporter.py  sequences.py  utils.py
notebooks/sandbox/: Clinvar Variation Sets.ipynb  Usage Styles.ipynb
notebooks/schemas/: vrs.json
notebooks/support/: bundlemanager.py  seqrepo.py
sandbox/: test-base64-sorting.py
src/ga4gh/: vrs
src/ga4gh/core/: __init__.py  digests.py  domain_models.py  enderef.py  entity_models.py  identifiers.py  models.py  pydantic.py
src/ga4gh/vr/: __init__.py  __main__.py  _models.py  dataproxy.py  digest.py  utils.py  (+2 more)
src/vmc/: __init__.py  _models.py  digest.py  serialize.py  utils.py
submodules/: README.md
tests/: conftest.py  test_dataproxy.py  test_identify.py  test_schemas.py  test_seqrepo.py  test_translator.py  test_validation_tests.py  test_vcr.py  test_vmc_digest.py  test_vmc_models.json  test_vmc_models.py  test_vr.py  test_vr_normalize.py  test_vrs.py  test_vrs2.py  test_vrs_normalize.py  vcr_support.py  vcrtest.py
tests/cassettes/: test_data_proxies[rest_dataproxy].yaml  test_normalize_allele.yaml  test_normalize_allele[rest_dataproxy].yaml  test_normalize_clinvar_rle.yaml  test_normalize_clinvar_rle_candidates.yaml  test_normalize_partial_rle_del_ins.yaml  test_reference_allele_rle.yaml  test_vcrtest.yaml  test_vcrtest[rest_dataproxy-NC_000013.11].yaml
tests/data/: schema-tests
tests/extras/: test_allele_translator.py  test_annotate_vcf.py  test_cnv_translator.py  test_dataproxy.py  test_object_store.py  test_translator.py  test_variation_normalizer_rest_dp.py  test_vcf_annotation.py
tests/validation/: data  test_functions.py  test_functions_tests.py  test_models.py  test_models_tests.py  test_objects_tests.py  test_schemas.py  test_utils_tests.py  test_vrs_schema.py
vmc/: __init__.py  __main__.py  _const.py  _models.py  conversions.py  digest.py  hgvs.py  normalize.py  seqrepo.py  serialize.py  utils.py
vmc/_data/: schema
vmc/extra/: alleleregistry.py  bundlemanager.py  demoapp.py  seqrepo.py  utils.py
vrs-in-a-box/: .gitignore  Dockerfile  README.md  VrsVcfAnnotator.wdl  run.sh  seqrepo.sh
(+183 files in other folders)
